--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width {
@@ -37,5 +38,19 @@ section {
 
 .top-banner {
     background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+
+.resume-button {
+    text-decoration: none;
+    background-image: linear-gradient(skyblue, blue);
+    padding: 10px 40px;
+    border-radius: 5px;
+    font-weight: 700;
+    color: white;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
 }
