--- a/style.css
+++ b/style.css
@@ -7,18 +7,28 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
+p {
+    text-align: justify;
+}
+
 .orange-color {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 150px;
+
 }
 
 .half-width {
     width: 50%;
     padding-left: 5%;
+    padding-right: 5%;
 
 }
 
@@ -53,4 +63,37 @@ section {
 .dream-big {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
+    background-position: right;
+}
+
+.exprience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.exprience-item {
+    box-shadow: 10px 10px 40px gray;
+    width: 50%;
+    padding: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+}
+
+#full-stack {
+    border-left: 7px solid tomato;
+}
+
+#front-end {
+    border-left: 7px solid blue;
+}
+
+footer {
+    background-color: black;
+    color: white;
+}
+
+footer p {
+    text-align: center;
 }
