--- a/style.css
+++ b/style.css
@@ -3,6 +3,28 @@ body {
     margin: 0;
 }
 
+section {
+    box-shadow: 10px 10px 40px gray;
+
+}
+
+.sec-1 {
+    padding-bottom: 40px;
+}
+
+.sec-2 {
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.sec-3 {
+    padding-top: 25px;
+}
+
+.sec-4 {
+    padding-bottom: 70px;
+}
+
 h1 {
     font-size: 41px;
 }
@@ -35,6 +57,11 @@ p {
 .half-width img {
     width: 80%;
     margin-top: 5px;
+
+}
+
+.d-1 {
+    border-right: 2px solid gray
 }
 
 .fb-button {
@@ -92,6 +119,7 @@ p {
 footer {
     background-color: black;
     color: white;
+    padding: 3px;
 }
 
 footer p {
