--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 0;
+    margin: 20px;
+
 }
 
 section {
@@ -19,6 +20,7 @@ section {
 
 .sec-3 {
     padding-top: 25px;
+    border-radius: 7px;
 }
 
 .sec-4 {
@@ -43,7 +45,8 @@ p {
 
 .flexible-container {
     display: flex;
-    margin-bottom: 150px;
+    margin-bottom: 20px;
+    border-radius: 7px;
 
 }
 
